2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd.c (pk_cmd_exec_1): Support commas in string
	arguments that are at the end of the argument list.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_array): Install a writer in arrays
	built from literals.
	* libpoke/pvm-val.c (pvm_val_reloc): Fix setting mapped_p in arrays.
	* testsuite/poke.map/ass-map-12.pk: New test.
	* testsuite/poke.map/ass-map-13.pk: Likewise.
	* testsuite/poke.map/ass-map-14.pk: Likewise.
	* testsuite/poke.map/ass-map-15.pk: Likewise.
	* testsuite/poke.map/ass-map-16.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_sizeof): Closure values have size zero by
	convention.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_val_reloc): Fix calculation of new
	boffset for contained structs.
	* testsuite/poke.map/ass-map-9.pk: New test.
	* testsuite/poke.map/ass-map-10.pk: Likewise.
	* testsuite/poke.map/ass-map-11.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_ps_scons): Subpass on scons_type
	instead of calling the constructor closure directly.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.h (PVM_VAL_ARR_MAPPED_P_BACK): Define
	(PVM_VAL_SCT_MAPPED_P_BACK): Likewise.
	(struct pvm_array): New field mapped_p_back;
	(struct pvm_struct): Likewise.
	* libpoke/pvm-val.c (pvm_make_array): Initialize mapped_p_back.
	(pvm_make_struct): Likewise.
	(pvm_val_reloc): Handle the mapped_p backups.
	(pvm_val_ureloc): Restore the mapped_p attribute.
	(pvm_val_reloc): Save the mapped_p attribute.

2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_struct): Install a writer in
	newly-constructed struct values.
	(pkl_gen_pr_type_array): Ditto for newly-constructed array values.
